--- a/StudentRegister/StudentRegister/MainWindow.xaml
+++ b/StudentRegister/StudentRegister/MainWindow.xaml
@@ -8,8 +8,37 @@
         Title="MainWindow" Height="450" Width="800">
 
     <DockPanel>
-        <ListBox DockPanel.Dock="Right" Name="StudentList"/>
-        <ContentControl Name="SelectedStudent" />
+        <ListBox DockPanel.Dock="Right" 
+                 Name="StudentList"
+                 ItemsSource="{Binding}">
+                
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                    <TextBlock MinWidth="200" Text="{Binding Path=Last}"/>
+                    <TextBlock MinWidth="200" Text="{Binding Path=First}"/>
+                    <TextBlock MinWidth="200" Text="{Binding Path=GPA}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <ContentControl Name="SelectedStudent" Content="{Binding}">
+            <ContentControl.ContentTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Width="100" Text="First Name"/>
+                            <TextBox Width="200" Text="{Binding Path= First}"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                        <TextBlock Width="100" Text="Last Name"/>
+                        <TextBox Width="200" Text="{Binding Path= Last}"/>
+                            </StackPanel>
+                        </StackPanel>
+                </DataTemplate>
+            </ContentControl.ContentTemplate>
+        </ContentControl>
+        <Button Click="AddCourse" DockPanel.
     </DockPanel>
     
 </Window>
